--- a/src/Components/Domiciles/ProductCategories/Defoult/Default.css
+++ b/src/Components/Domiciles/ProductCategories/Defoult/Default.css
@@ -41,18 +41,16 @@ section.categorySection .selectCategory img {
   width: 10vh;
 }
 section.categorySection .productsList {
+  align-content: center;
   display: flex;
   flex-wrap: wrap;
-  align-content: center;
   justify-content: space-evenly;
   margin-top: 5vh;
   width: 90%;
 }
-section.categorySection
-  .productsList
-  .pizzaCard:last-child{
-    align-self: flex-end;
-  }
+section.categorySection .productsList .pizzaCard:last-child {
+  align-self: flex-end;
+}
 section.categorySection
   .productsList
   .pizzaCard:last-child
@@ -72,61 +70,39 @@ section.categorySection
   margin-top: 15px;
   width: 100%;
 }
-
-
 @media (max-width: 480px) {
-  section.categorySection a {
+  pizzaCard:last-child section.categorySection a {
     font-size: 0.9rem;
     padding: 10px;
   }
-  section.categorySection
-  .productsList
-  .pizzaCard:last-child
-  .pizzaFullDescription
-  .pizzaInfo h4{
+  section.categorySection .productsList . .pizzaFullDescription .pizzaInfo h4 {
     font-size: 0.6rem;
-}
-
+  }
 }
 @media (min-width: 481px) and (max-width: 769px) {
-  section.categorySection a {
+  pizzaCard:last-child section.categorySection a {
     font-size: 1.2rem;
     padding: 15px;
   }
-  section.categorySection
-  .productsList
-  .pizzaCard:last-child
-  .pizzaFullDescription
-  .pizzaInfo h4{
+  section.categorySection .productsList . .pizzaFullDescription .pizzaInfo h4 {
     font-size: 0.7rem;
-}
-
+  }
 }
 @media (min-width: 770px) and (max-width: 993px) {
-  section.categorySection a {
+  pizzaCard:last-child section.categorySection a {
     font-size: 1.4rem;
     padding: 20px;
   }
-  section.categorySection
-  .productsList
-  .pizzaCard:last-child
-  .pizzaFullDescription
-  .pizzaInfo h4{
+  section.categorySection .productsList . .pizzaFullDescription .pizzaInfo h4 {
     font-size: 0.8rem;
-}
-
+  }
 }
 @media (min-width: 994px) {
-  section.categorySection a {
+  pizzaCard:last-child section.categorySection a {
     font-size: 1.6rem;
     padding: 25px;
   }
-  section.categorySection
-  .productsList
-  .pizzaCard:last-child
-  .pizzaFullDescription
-  .pizzaInfo h4{
+  section.categorySection .productsList . .pizzaFullDescription .pizzaInfo h4 {
     font-size: 0.9rem;
-}
-
+  }
 }
