--- a/src/Components/Home/ButtonCarousel/ButtonCarousel.css
+++ b/src/Components/Home/ButtonCarousel/ButtonCarousel.css
@@ -1,18 +1,19 @@
-button.buttonCarousel{
-    background-color: var(--colorOldRed);
-    min-width: 20px;
-    min-height: 20px;
-    color: var(--colorOldRed);
-    border: 2px solid var(--colorNavWhite);
-    padding: cal(min(1vh,1vw));
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+button.buttonCarousel {
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  background-color: var(--colorOldRed);
+  border-radius: 50%;
+  border: 2px solid var(--colorNavWhite);
+  color: var(--colorOldRed);
+  min-height: 20px;
+  min-width: 20px;
+  padding: cal(min(1vh, 1vw));
 }
-button.buttonCarousel:hover, button.buttonCarousel:active{
-    background-color: var(--colorNavWhite);
-    border: 2px solid var(--colorOldRed);
-    color: var(--colorNavWhite);
+button.buttonCarousel:hover,
+button.buttonCarousel:active {
+  background-color: var(--colorNavWhite);
+  border: 2px solid var(--colorOldRed);
+  color: var(--colorNavWhite);
 }
