--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -3,6 +3,7 @@
   color: var(--colorTextBlack);
   display: flex;
   flex-direction: column;
+  margin-top: 75px;
   width: 100vw;
 }
 .contactHome {
@@ -22,20 +23,17 @@
   display: flex;
   flex-direction: column;
 }
-
-.contactPhones .phoneNumbers{
+.contactPhones .phoneNumbers {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   height: 50%;
+  justify-content: space-evenly;
 }
-
 .contactLocation iframe {
+  border: 0;
   height: auto;
   margin: 2vw;
   width: 90%;
-
-  border: 0;
 }
 .contactLocation h3 {
   padding: 0 2vw;
@@ -49,9 +47,9 @@
   align-self: center;
   display: flex;
 }
-.phoneNumber a{
-  text-decoration: none;
+.phoneNumber a {
   color: var(--colorTextBlack);
+  text-decoration: none;
 }
 .socialHome {
   display: flex;
@@ -101,21 +99,22 @@
   width: 95%;
 }
 .carouselImageHome .imageHome #carouselImage {
+  left: 50%;
   max-height: 100%;
   position: absolute;
-  left: 50%;
   transform: translateX(-50%);
   z-index: 0;
 }
-.buttonsCarousel{
-    display: flex;
-    min-width: 50vw;
-    margin-top: 1vw;
-    justify-content: space-around;
+.buttonsCarousel {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1vw;
+  min-width: 50vw;
 }
-
 @media (max-width: 480px) {
-  .contactLocation iframe {height: 40%;}
+  .contactLocation iframe {
+    height: 40%;
+  }
   .carouselImageHome .imageHome {
     height: 50vh;
   }
