--- a/src/Components/ShoppingCart/ShoppingCart.css
+++ b/src/Components/ShoppingCart/ShoppingCart.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin: max(20px, 5vh) 0;
+  margin: 75px;
 }
 .containerCart .infoCart,
 .containerCart .titleCart {
@@ -34,8 +34,8 @@
   border: var(--colorRed) solid 5px;
   color: var(--colorNavWhite);
   padding: max(15px, 1vh) 0;
-  width: 80vw;
   text-align: center;
+  width: 80vw;
 }
 .containerCart .titleCart h2 {
   margin-bottom: max(10px, 1vh);
@@ -55,11 +55,9 @@ article.productsCart button.clearCart {
   margin-top: 10px;
   padding: 8px;
 }
-
 article.productsCart button.clearCart:hover {
-    background-color: var(--colorRed);
-  }
-
+  background-color: var(--colorRed);
+}
 article.productsCart .productsSelectedCart {
   align-items: center;
   display: flex;
@@ -68,111 +66,110 @@ article.productsCart .productsSelectedCart {
   padding: max(15px, 2vh) 0;
   width: 100%;
 }
-
-.resultsCart{
-    display: flex;
-    width: 80vw;
-    align-items: center;
-    background-color: var(--colorTextBlack);
-    justify-content: space-between;
-    border-left: var(--colorOrange) solid 5px;
-    border-right: var(--colorTextBlack) solid 5px;
+.resultsCart {
+  align-items: center;
+  background-color: var(--colorTextBlack);
+  border-left: var(--colorOrange) solid 5px;
+  border-right: var(--colorTextBlack) solid 5px;
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
 }
-.resultsCart .resultCartText{
-    display: flex;
-    width: 65%;
-    flex-direction: column;
-    background-color: var(--colorOrange);
-    padding: max(10px, 2vh) max(20px, 2vw);
-    align-items: center;
-    justify-content: center;
-    color: var(--colorNavWhite);
+.resultsCart .resultCartText {
+  align-items: center;
+  background-color: var(--colorOrange);
+  color: var(--colorNavWhite);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: max(10px, 2vh) max(20px, 2vw);
   text-align: center;
+  width: 65%;
 }
-.resultsCart .resultCartText h2{
-    margin-bottom: 10px;
-    font-size: 2rem;
+.resultsCart .resultCartText h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
 }
-
-.resultsCart .resultCartValue{
-    display: flex;
-    width: 35%;
-    height: 100%;
-    background-color: var(--colorTextBlack);
-    padding: max(10px, 2vh) 0;
-    align-items: center;
-    justify-content: center;
-    color: var(--colorNavWhite);
+.resultsCart .resultCartValue {
+  align-items: center;
+  background-color: var(--colorTextBlack);
+  color: var(--colorNavWhite);
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  padding: max(10px, 2vh) 0;
+  width: 35%;
 }
-section.formCart{
+section.formCart {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: max(2vh, 15px);
   text-align: center;
-    display: flex;
-    width: 80vw;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: max(2vh, 15px);
+  width: 80vw;
 }
-section.formCart h5{
-  max-width: 500px;
+section.formCart h5 {
   height: auto;
+  max-width: 500px;
   word-wrap: break-word;
 }
-section.formCart p{
+section.formCart p {
   width: 500px;
   word-wrap: break-word;
 }
-section.formCart form{
-    display: flex;
-    width: 80%;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+section.formCart form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 80%;
 }
-section.formCart form input:not([type="submit"]), section.formCart form textarea{
-    min-width: max(60%, 200px);
-    margin: max(5px, 1vh) 0;
-    padding: max(10px, 1vw);
-    display: flex;
-    align-items: center;
+section.formCart form input:not([type="submit"]),
+section.formCart form textarea {
+  align-items: center;
+  display: flex;
+  margin: max(5px, 1vh) 0;
+  min-width: max(60%, 200px);
+  padding: max(10px, 1vw);
 }
-section.formCart form #message{
-    min-height: 60px;
-} 
-section.formCart form #message::placeholder{
-  white-space:normal;
+section.formCart form #message {
+  min-height: 60px;
+}
+section.formCart form #message::placeholder {
   text-align: justify;
+  white-space: normal;
 }
-
-#submit{
-    display: flex;
-    margin: max(5px, 1vh) 0;
-    align-items: center;
-    padding: max(10px, 1vw) max(20px, 2vw);
-    background-color: #008821;
-    color: var(--colorNavWhite);
+#submit {
+  align-items: center;
+  background-color: #008821;
+  color: var(--colorNavWhite);
+  display: flex;
+  margin: max(5px, 1vh) 0;
+  padding: max(10px, 1vw) max(20px, 2vw);
 }
-#submit img{
+#submit img {
   width: 30px;
 }
-
 #submit:hover {
   background-color: #00bb2d;
 }
-@media (max-width: 769px){
-section.formCart form #message{
-  min-height: 120px;
+#submit:disabled {
+  background-color: #7db88b;
 }
-.resultsCart .resultCartText{
-  width: 40%;
+@media (max-width: 769px) {
+  section.formCart form #message {
+    min-height: 120px;
+  }
+  .resultsCart .resultCartText {
+    width: 40%;
+  }
+  .resultsCart .resultCartValue {
+    width: 60%;
+  }
 }
-.resultsCart .resultCartValue{
-  width: 60%;
-}
-}
-
-@media (min-width: 770px) and (max-width: 994px){
-  section.formCart form #message{
+@media (min-width: 770px) and (max-width: 994px) {
+  section.formCart form #message {
     min-height: 80px;
   }
 }
