--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,4 +1,5 @@
 .container {
+  align-items: center;
   background: linear-gradient(var(--colorRed) 20%, var(--colorOrange) 80%);
   display: flex;
   flex-direction: column;
